[rxjava2] add: rxjava factories extensions

--- a/ktx/build.gradle
+++ b/ktx/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
 }
