--- a/ktx/build.gradle
+++ b/ktx/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:27.1.1"
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
     implementation "com.google.code.gson:gson:2.8.5"
+
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.robolectric:robolectric:3.8"
 }
