--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: "com.jfrog.bintray"
 
-version = '1.0.0'
+version = '1.1.0'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -25,6 +25,7 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
 }
@@ -32,8 +33,10 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "com.android.support:appcompat-v7:28.0.0"
+    testImplementation project(":junit")
     testImplementation "junit:junit:4.12"
     testImplementation "org.robolectric:robolectric:4.0-beta-1"
+    testImplementation "org.robolectric:shadows-supportv4:4.0-beta-1"
 }
 
 rootProject.ext {
