--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: "com.jfrog.bintray"
 
-version = '1.0.0'
+version = '1.1.0'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     testImplementation "junit:junit:4.12"
+    testImplementation project(":junit")
 }
 
 rootProject.ext {
