--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,10 +33,14 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "com.android.support:appcompat-v7:28.0.0"
+
     testImplementation project(":junit")
     testImplementation "junit:junit:4.12"
-    testImplementation "org.robolectric:robolectric:4.0-beta-1"
-    testImplementation "org.robolectric:shadows-supportv4:4.0-beta-1"
+    testImplementation "androidx.test:core:1.1.0"
+    testImplementation "androidx.test.ext:junit:1.1.0"
+    testImplementation "androidx.test:runner:1.1.1"
+    testImplementation "org.robolectric:robolectric:4.0.2"
+    testImplementation "org.robolectric:shadows-supportv4:4.0.2"
 }
 
 rootProject.ext {
