--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ references:
   android_config: &android_config
     working_directory: ~/workspace
     docker:
-      - image: circleci/android:api-27-alpha
+      - image: circleci/android:api-28
     environment:
       JVM_OPTS: -Xmx4G
 
